@@ -5,32 +5,34 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.vztekoverflow</groupId>
-    <artifactId>BACIL</artifactId>
+    <artifactId>CILOSTAZOL</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>launcher</module>
         <module>language</module>
+        <module>cil-parser</module>
+        <module>tests</module>
     </modules>
 
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- If you update this number make sure the VERSION value in ./cilostazol matches -->
-        <org.graalvm.version>22.2.0</org.graalvm.version>
+        <org.graalvm.version>22.3.0</org.graalvm.version>
     </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.3.0</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <argLine>--add-exports org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
-
-
 </project>
